# CPP

./: .gitignore
CPPbasics/Lesson1/HW1/: CMakeCache.txt  Makefile  cmake_install.cmake  main
CPPbasics/Lesson3/HomeWork3/: HomeWork3.sln
CPPbasics/Lesson4/: HomeWork4.cpp
CPPbasics/Lesson4/HomeWork4/: HomeWork4.sln
DifficultMoments/HomeWorks/HomeWork1_HelperClasses/: CodeHW1.cpp  HeaderHW1.h  HelperClassesCode.cpp  HelperClassesHeader.h  HelperClassesMain.cpp  HomeWork1_HelperClasses.sln  PhoneBook.txt
DifficultMoments/HomeWorks/HomeWork2_MemoryAndTimer/: MemTimerCode.cpp  MemTimerHeader.h  MemTimerMain.cpp
DifficultMoments/HomeWorks/HomeWork3_SequentContainers/: SequentContCode.cpp  SequentContHeader.h  SequentContMain.cpp
DifficultMoments/HomeWorks/HomeWork4_Algorithms_STL/: Algorithms_STL.cpp
DifficultMoments/HomeWorks/HomeWork5_AssociatedContainers/: Algorithms_AssociatedContainers.cpp
DifficultMoments/HomeWorks/HomeWork6_Thread/: Thread.cpp
DifficultMoments/HomeWorks/HomeWork8_Google_Test/: Google_Test_Header.h  test.cpp
GoF/SBomberProject/SBomberProject/: log.txt
Network_Programming/HomeWork/: CMakeLists.txt
Network_Programming/HomeWork/hw1/: CMakeLists.txt
Network_Programming/HomeWork/hw2/: CMakeLists.txt
Network_Programming/HomeWork/hw4/tcp_server/: CMakeLists.txt  main.cpp  tcp_server.cpp  tcp_server.h
Network_Programming/certificates/: key.pem  server.pem
OAIP/: OAIP.sln  OAIP.vcxproj  Source.cpp
OAIP/Debug/: OAIP.exe.recipe  OAIP.ilk  OAIP.vcxproj.FileListAbsolute.txt  vc142.idb
OAIP/Debug/OAIP.tlog/: CL.command.1.tlog  (+6 more)
(+165 files in other folders)
